@@ -2,17 +2,21 @@
 
 Java 应用出现线上故障，如何进行诊断？
 
+系统故障诊断思路：
+
+![](http://dunwu.test.upcdn.net/snap/20200309181645.png)
+
+应用故障诊断思路：
+
+![](http://dunwu.test.upcdn.net/snap/20200309181831.png)
+
 ## CPU
 
-CPU 飙升常见原因：
+CPU 使用率过高，往往是由于程序逻辑问题导致的，常见场景如：死循环，无限递归、频繁 GC、线程上下文切换过多。
 
-程序逻辑问题，如：死循环，无限递归、频繁 GC、线程上下文切换过多。
+### 查找 CPU 占用率较高的进程、线程
 
-### 查看堆栈信息
-
-简单来说，就是使用 `ps`、`top`、`jstack` 命令配合，来打印堆栈信息，从而分析。
-
-#### 查找 CPU 占用率较高的进程、线程
+线上环境的 Java 应用可能有多个进程、线程，所以，要先找到 CPU 占用率较高的进程、线程。
 
 （1）使用 `ps` 命令查看 xxx 应用的进程 ID（PID）
 
@@ -28,9 +32,7 @@ ps -ef | grep xxx
 
 （4）将占用 CPU 最高的 PID 转换为 16 进制，使用 `printf '%x\n' pid` 得到 `nid`
 
-#### 获取堆栈信息
-
-（1）使用 `jstack pic | grep 'nid' -C5` 命令，查看堆栈信息：
+（5）使用 `jstack pic | grep 'nid' -C5` 命令，查看堆栈信息：
 
 ```shell
 $ jstack 7129 | grep '0x1c23' -C5
@@ -47,13 +49,13 @@ $ jstack 7129 | grep '0x1c23' -C5
         - locked <0x00000000b5384018> (a org.apache.felix.framework.util.ThreadGate)
 ```
 
-（2）更常见的操作是用 `jstack` 生成堆栈快照，然后基于快照文件进行分析。生成快照命令：
+（6）更常见的操作是用 `jstack` 生成堆栈快照，然后基于快照文件进行分析。生成快照命令：
 
 ```shell
 jstack -F -l pid >> threaddump.log
 ```
 
-（3）分析堆栈信息
+（7）分析堆栈信息
 
 一般来说，状态为 `WAITING`、`TIMED_WAITING` 、`BLOCKED` 的线程更可能出现问题。可以执行以下命令查看线程状态统计：
 
@@ -65,11 +67,11 @@ cat threaddump.log | grep "java.lang.Thread.State" | sort -nr | uniq -c
 
 ### 是否存在频繁 GC
 
-如果应用频繁 GC，也可能导致 CPU 飙升。为何频繁 GC 可以使用 `jstack` 来分析问题。在 GC 问题章节具体讨论。
+如果应用频繁 GC，也可能导致 CPU 飙升。为何频繁 GC 可以使用 `jstack` 来分析问题（分析和解决频繁 GC 问题，在后续讲解）。
 
 那么，如何判断 Java 进程 GC 是否频繁？
 
-可以使用 `jstat -gc pid 1000` 命令来观察 gc 状态。
+可以使用 `jstat -gc pid 1000` 命令来观察 GC 状态。
 
 ```shell
 $ jstat -gc 29527 200 5
@@ -83,7 +85,7 @@ $ jstat -gc 29527 200 5
 
 ### 是否存在频繁上下文切换
 
-针对频繁上下文切换问题，可以使用 `vmstat` 命令来进行查看。
+针对频繁上下文切换问题，可以使用 `vmstat pid` 命令来进行查看。
 
 ```shell
 $ vmstat 7129
@@ -93,6 +95,28 @@ procs -----------memory---------- ---swap-- -----io---- -system-- ------cpu-----
 ```
 
 其中，`cs` 一列代表了上下文切换的次数。
+
+【解决方法】
+
+如果，线程上下文切换很频繁，可以考虑在应用中针对线程进行优化，方法有：
+
+- **无锁并发**：多线程竞争时，会引起上下文切换，所以多线程处理数据时，可以用一些办法来避免使用锁，如将数据的 ID 按照 Hash 取模分段，不同的线程处理不同段的数据；
+- **CAS 算法**：Java 的 Atomic 包使用 CAS 算法来更新数据，而不需要加锁；
+- **最少线程**：避免创建不需要的线程，比如任务很少，但是创建了很多线程来处理，这样会造成大量线程都处于等待状态；
+- **使用协程**：在单线程里实现多任务的调度，并在单线程里维持多个任务间的切换；
+
+## 内存
+
+内存问题诊断起来相对比 CPU 麻烦一些，场景也比较多。主要包括 OOM、GC 问题和堆外内存。一般来讲，我们会先用 `free` 命令先来检查一发内存的各种情况。
+
+诊断内存问题，一般首先会用 `free` 命令查看一下机器的物理内存使用情况。
+
+```shell
+$ free
+              total        used        free      shared  buff/cache   available
+Mem:        8011164     3767900      735364        8804     3507900     3898568
+Swap:       5242876        6836     5236040
+```
 
 ## 磁盘
 
@@ -131,149 +155,13 @@ dm-1              0.00     0.00    0.00    0.00     0.00     0.00    16.95     0
 
 可以使用 `lsof -p pid` 命令
 
-## 内存
-
-内存问题诊断起来相对比 CPU 麻烦一些，场景也比较多。主要包括 OOM、GC 问题和堆外内存。一般来讲，我们会先用`free`命令先来检查一发内存的各种情况。
-
-### 查看物理内存
-
-诊断内存问题，一般首先会用 `free` 命令查看一下机器的物理内存使用情况。
-
-```shell
-$ free
-              total        used        free      shared  buff/cache   available
-Mem:        8011164     3767900      735364        8804     3507900     3898568
-Swap:       5242876        6836     5236040
-```
-
-### OOM
-
-OOM 是 OutOfMemoryError 的缩写，即内存溢出。
-
-在 JVM 规范中，**除了程序计数器区域外，其他运行时区域都可能发生 `OutOfMemoryError` 异常（简称 OOM）**。
-
-#### Java 堆空间不足
-
-【现象】Java 堆空间不足时的错误提示：
-
-```
-Exception in thread "main" java.lang.OutOfMemoryError: Java heap space
-```
-
-这个错误是指：Java 堆内存已经达到 `-Xmx` 设置的最大值。Java 堆用于存储对象实例。只要不断地创建对象，并且保证 GC Roots 到对象之间有可达路径来避免垃圾收集器回收这些对象，那么当堆空间到达最大容量限制后就会产生 OOM。
-
-【诊断】
-
-诊断重点在于：判断是 **`内存泄漏（Memory Leak）`** 还是 **`内存溢出（Memory Overflow）`**。
-
-使用 jstack 和 jmap 生成 threaddump 和 heapdump，然后用内存分析工具（如：Eclipse Memory Analyzer）进行分析。
-
-【处理】
-
-- 如果是内存泄漏，可以进一步查看泄漏对象到 GC Roots 的对象引用链。这样就能找到泄漏对象是怎样与 GC Roots 关联并导致 GC 无法回收它们的。掌握了这些原因，就可以较准确的定位出引起内存泄漏的代码。
-- 如果不存在内存泄漏，即内存中的对象确实都必须存活着，则应当检查虚拟机的堆参数（`-Xmx` 和 `-Xms`），与机器物理内存进行对比，看看是否可以调大。并从代码上检查是否存在某些对象生命周期过长、持有时间过长的情况，尝试减少程序运行期的内存消耗。
-
-#### 无法新建本地线程
-
-【现象】无法新建本地线程的错误提示：
-
-```
-Exception in thread "main" java.lang.OutOfMemoryError: unable to create new native thread
-```
-
-【原因】没有足够的内存空间给线程分配 java 栈。
-
-【诊断】
-
-通常，先考虑是否是使用线程池有问题，比如忘记 `shutdown`。可以使用 `jstack` 或 `jmap` 来分析。
-
-如果一切正常，JVM 方面可以通过指定 `-Xss` 来调整 Java 栈的大小。
-
-最后，可以查看系统对于线程的限制数是否太小。可以通过 `vi /etc/security/limits.conf` 修改 `nofile` 和 `nproc` 来调整系统对于线程的限制数。
-
-【示例】修改 `nofile` 和 `nproc` 
-
-```shell
-* soft nofile 65536
-* hard nofile 65536
-* soft nproc 65536
-* hard nproc 65536
-```
-
-#### 方法区和运行时常量池溢出
-
-【现象】元数据空间不足的错误提示：
-
-```
-Exception in thread "main" java.lang.OutOfMemoryError: Metaspace
-```
-
-【原因】**元数据区的内存不足，即方法区和运行时常量池的空间不足**。
-
-方法区用于存放 Class 的相关信息，如类名、访问修饰符、常量池、字段描述、方法描述等。
-
-一个类要被垃圾收集器回收，判定条件是比较苛刻的。在经常动态生成大量 Class 的应用中，需要特别注意类的回收状况。这类常见除了 CGLib 字节码增强和动态语音意外，常见的还有：大量 JSP 或动态产生 JSP 文件的应用（JSP 第一次运行时需要编译为 Java 类）、基于 OSGi 的应用（即使是同一个类文件，被不同的加载器加载也会视为不同的类）等。
-
-【诊断】占用已经达到 `-XX:MaxMetaspaceSize` 设置的最大值，诊断思路和上面的一致，参数方面可以通过 `-XX:MaxMetaspaceSize` 来进行调整。
-
-【处理】如何调整元数据空间：
-
-- 在 JDK6 及之前的版本中，可以通过 `-XX:PermSize` 和 `-XX:MaxPermSize` 设置永久代空间大小，从而限制方法区大小，并间接限制其中常量池的容量。
-- JDK8 及以后，JVM 永久代内存改为元数据空间，可以通过 `-XX:MetaspaceSize` 和 `-XX:MaxMetaspaceSize` 调整。
-
-### StackOverflowError
-
-栈内存溢出，这个大家见到也比较多。
-**Exception in thread "main" java.lang.StackOverflowError**
-表示线程栈需要的内存大于 Xss 值，同样也是先进行诊断，参数方面通过`Xss`来调整，但调整的太大可能又会引起 OOM。
-
-#### 使用 JMAP 定位代码内存泄漏
-
-上述关于 OOM 和 StackOverflow 的代码诊断方面，我们一般使用 JMAP`jmap -dump:format=b,file=filename pid`来导出 dump 文件
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-083817.png)
-通过 mat(Eclipse Memory Analysis Tools)导入 dump 文件进行分析，内存泄漏问题一般我们直接选 Leak Suspects 即可，mat 给出了内存泄漏的建议。另外也可以选择 Top Consumers 来查看最大对象报告。和线程相关的问题可以选择 thread overview 进行分析。除此之外就是选择 Histogram 类概览来自己慢慢分析，大家可以搜搜 mat 的相关教程。
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-083818.png)
-
-日常开发中，代码产生内存泄漏是比较常见的事，并且比较隐蔽，需要开发者更加关注细节。比如说每次请求都 new 对象，导致大量重复创建对象；进行文件流操作但未正确关闭；手动不当触发 gc；ByteBuffer 缓存分配不合理等都会造成代码 OOM。
-
-另一方面，我们可以在启动参数中指定`-XX:+HeapDumpOnOutOfMemoryError`来保存 OOM 时的 dump 文件。
-
-#### gc 问题和线程
-
-gc 问题除了影响 cpu 也会影响内存，诊断思路也是一致的。一般先使用 jstat 来查看分代变化情况，比如 youngGC 或者 fullGC 次数是不是太多呀；EU、OU 等指标增长是不是异常呀等。
-线程的话太多而且不被及时 gc 也会引发 oom，大部分就是之前说的`unable to create new native thread`。除了 jstack 细细分析 dump 文件外，我们一般先会看下总体线程，通过`pstreee -p pid |wc -l`。
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-083819.png)
-或者直接通过查看`/proc/pid/task`的数量即为线程数量。
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-083820.png)
-
-### 堆外内存
-
-如果碰到堆外内存溢出，那可真是太不幸了。首先堆外内存溢出表现就是物理常驻内存增长快，报错的话视使用方式都不确定，如果由于使用 Netty 导致的，那错误日志里可能会出现`OutOfDirectMemoryError`错误，如果直接是 DirectByteBuffer，那会报`OutOfMemoryError: Direct buffer memory`。
-
-堆外内存溢出往往是和 NIO 的使用相关，一般我们先通过 pmap 来查看下进程占用的内存情况`pmap -x pid | sort -rn -k3 | head -30`，这段意思是查看对应 pid 倒序前 30 大的内存段。这边可以再一段时间后再跑一次命令看看内存增长情况，或者和正常机器比较可疑的内存段在哪里。
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-83821.png)
-我们如果确定有可疑的内存端，需要通过 gdb 来分析`gdb --batch --pid {pid} -ex "dump memory filename.dump {内存起始地址} {内存起始地址+内存块大小}"`
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-083821.png)
-获取 dump 文件后可用 heaxdump 进行查看`hexdump -C filename | less`，不过大多数看到的都是二进制乱码。
-
-NMT 是 Java7U40 引入的 HotSpot 新特性，配合 jcmd 命令我们就可以看到具体内存组成了。需要在启动参数中加入 `-XX:NativeMemoryTracking=summary` 或者 `-XX:NativeMemoryTracking=detail`，会有略微性能损耗。
-
-一般对于堆外内存缓慢增长直到爆炸的情况来说，可以先设一个基线`jcmd pid VM.native_memory baseline`。
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-083822.png)
-然后等放一段时间后再去看看内存增长的情况，通过`jcmd pid VM.native_memory detail.diff(summary.diff)`做一下 summary 或者 detail 级别的 diff。
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-083823.png)
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-83824.png)
-可以看到 jcmd 分析出来的内存十分详细，包括堆内、线程以及 gc(所以上述其他内存异常其实都可以用 nmt 来分析)，这边堆外内存我们重点关注 Internal 的内存增长，如果增长十分明显的话那就是有问题了。
-detail 级别的话还会有具体内存段的增长情况，如下图。
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-083824.png)
-
-此外在系统层面，我们还可以使用 strace 命令来监控内存分配 `strace -f -e "brk,mmap,munmap" -p pid`
-这边内存分配信息主要包括了 pid 和内存地址。
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-083825.jpg)
-
-不过其实上面那些操作也很难定位到具体的问题点，关键还是要看错误日志栈，找到可疑的对象，搞清楚它的回收机制，然后去分析对应的对象。比如 DirectByteBuffer 分配内存的话，是需要 full GC 或者手动 system.gc 来进行回收的(所以最好不要使用`-XX:+DisableExplicitGC`)。那么其实我们可以跟踪一下 DirectByteBuffer 对象的内存情况，通过`jmap -histo:live pid`手动触发 fullGC 来看看堆外内存有没有被回收。如果被回收了，那么大概率是堆外内存本身分配的太小了，通过`-XX:MaxDirectMemorySize`进行调整。如果没有什么变化，那就要使用 jmap 去分析那些不能被 gc 的对象，以及和 DirectByteBuffer 之间的引用关系了。
-
 ## 网络
+
+### 无法连接
+
+可以通过 ping 命令，查看是否能连通。
+
+通过 netstat
 
 ### 网络超时
 
@@ -384,22 +272,42 @@ close_wait 往往都是因为应用程序写的有问题，没有在 ACK 后再�
 
 ## GC 问题
 
+GC 问题除了影响 CPU 也会影响内存，诊断思路也是一致的。
+
+一般先使用 `jstat` 来查看分代变化情况，比如 minor gc 或 full gc 次数是不是太频繁。
+
+线程量太大，且不被及时 GC 也会引发 OOM，大部分就是之前说的 `unable to create new native thread`。除了 jstack 细细分析 dump 文件外，我们一般先会看下总体线程。
+
+可以执行以下命令中任意一个，没来查看当前进程创建的总线程数。
+
+```shell
+pstreee -p pid | wc -l
+ls -l /proc/pid/task | wc -l
+```
+
 堆内内存泄漏总是和 GC 异常相伴。不过 GC 问题不只是和内存问题相关，还有可能引起 CPU 负载、网络问题等系列并发症，只是相对来说和内存联系紧密些，所以我们在此单独总结一下 GC 相关问题。
 
 我们在 cpu 章介绍了使用 jstat 来获取当前 GC 分代变化信息。而更多时候，我们是通过 GC 日志来诊断问题的，在启动参数中加上`-verbose:gc -XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps`来开启 GC 日志。
-常见的 Young GC、Full GC 日志含义在此就不做赘述了。
+常见的 Minor GC、Full GC 日志含义在此就不做赘述了。
 
-针对 gc 日志，我们就能大致推断出 youngGC 与 fullGC 是否过于频繁或者耗时过长，从而对症下药。我们下面将对 G1 垃圾收集器来做分析，这边也建议大家使用 G1`-XX:+UseG1GC`。
+针对 gc 日志，我们就能大致推断出 Minor GC 与 fullGC 是否过于频繁或者耗时过长，从而对症下药。我们下面将对 G1 垃圾收集器来做分析，这边也建议大家使用 G1`-XX:+UseG1GC`。
 
-**youngGC 过频繁**
-youngGC 频繁一般是短周期小对象较多，先考虑是不是 Eden 区/新生代设置的太小了，看能否通过调整-Xmn、-XX:SurvivorRatio 等参数设置来解决问题。如果参数正常，但是 young gc 频率还是太高，就需要使用 Jmap 和 MAT 对 dump 文件进行进一步诊断了。
+### OOM
 
-**youngGC 耗时过长**
-耗时过长问题就要看 GC 日志里耗时耗在哪一块了。以 G1 日志为例，可以关注 Root Scanning、Object Copy、Ref Proc 等阶段。Ref Proc 耗时长，就要注意引用相关的对象。Root Scanning 耗时长，就要注意线程数、跨代引用。Object Copy 则需要关注对象生存周期。而且耗时分析它需要横向比较，就是和其他项目或者正常时间段的耗时比较。比如说图中的 Root Scanning 和正常时间段比增长较多，那就是起的线程太多了。
-![img](https://fredal-blog.oss-cn-hangzhou.aliyuncs.com/2019-11-04-083826.png)
+OOM 定位可以参考：[JVM 内存管理之OutOfMemoryError](jvm-memory.md#三OutOfMemoryError)
 
-**触发 fullGC**
-G1 中更多的还是 mixedGC，但 mixedGC 可以和 youngGC 思路一样去诊断。触发 fullGC 了一般都会有问题，G1 会退化使用 Serial 收集器来完成垃圾的清理工作，暂停时长达到秒级别，可以说是半跪了。
+### Minor GC 过频
+
+Minor GC 频繁一般是短周期小对象较多，先考虑是不是 Eden 区/新生代设置的太小了，看能否通过调整 `-Xmn、-XX:SurvivorRatio` 等参数设置来解决问题。如果参数正常，但是 Minor GC 频率还是太高，就需要使用 Jmap 和 MAT 对 dump 文件进行进一步诊断了。
+
+### Minor GC 耗时过长
+
+耗时过长问题就要看 GC 日志里耗时耗在哪一块了。以 G1 日志为例，可以关注 Root Scanning、Object Copy、Ref Proc 等阶段。Ref Proc 耗时长，就要注意引用相关的对象。Root Scanning 耗时长，就要注意线程数、跨代引用。Object Copy 则需要关注对象生存周期。而且耗时分析它需要横向比较，就是和其他项目或者正常时间段的耗时比较。
+
+### Full GC 过频
+
+G1 中更多的还是 mixedGC，但 mixedGC 可以和 Minor GC 思路一样去诊断。触发 fullGC 了一般都会有问题，G1 会退化使用 Serial 收集器来完成垃圾的清理工作，暂停时长达到秒级别，可以说是半跪了。
+
 fullGC 的原因可能包括以下这些，以及参数调整方面的一些思路：
 
 - 并发阶段失败：在并发标记阶段，MixGC 之前老年代就被填满了，那么这时候 G1 就会放弃标记周期。这种情况，可能就需要增加堆大小，或者调整并发标记线程数`-XX:ConcGCThreads`。
@@ -419,3 +327,4 @@ jinfo -flag +HeapDumpAfterFullGC pid
 ## 参考资料
 
 - [JAVA 线上故障诊断全套路](https://fredal.xin/java-error-check)
+- [从实际案例聊聊Java应用的GC优化](https://tech.meituan.com/2017/12/29/jvm-optimize.html)
